# stores

./: .gitignore  AUTHORS  CHANGES.md  Makefile  README.md  TODO.md  stores.opam
bench/: Makefile  README.Store.md  benchStores.ml  dune
headers/: library-header
src/: HStoreRef.ml  HStoreTransactionalRef.ml  Store.ml  StoreMap.ml  StoreMap.mli  StoreRef.ml  StoreRef.mli  StoreTransactionalRef.ml  StoreTransactionalRef.mli  StoreVector.ml  StoreVector.mli  Stores.ml  Univ.ml  Univ.mli  dune  index.mld
